@@ -4,6 +4,8 @@ export()
 export(CompDb)
 export(CompoundIdFilter)
 export(CompoundNameFilter)
+export(MsmsMzRangeMaxFilter)
+export(MsmsMzRangeMinFilter)
 export(compound_tbl_lipidblast)
 export(compound_tbl_sdf)
 export(compounds)
@@ -18,6 +20,8 @@ export(tables)
 exportClasses(CompDb)
 exportClasses(CompoundIdFilter)
 exportClasses(CompoundNameFilter)
+exportClasses(MsmsMzRangeMaxFilter)
+exportClasses(MsmsMzRangeMinFilter)
 exportMethods(dbconn)
 exportMethods(show)
 exportMethods(spectra)
@@ -25,6 +29,7 @@ exportMethods(supportedFilters)
 importClassesFrom(AnnotationFilter,AnnotationFilter)
 importClassesFrom(AnnotationFilter,AnnotationFilterList)
 importClassesFrom(AnnotationFilter,CharacterFilter)
+importClassesFrom(AnnotationFilter,DoubleFilter)
 importClassesFrom(MSnbase,Spectra)
 importFrom(AnnotationFilter,AnnotationFilter)
 importFrom(AnnotationFilter,AnnotationFilterList)
